--- a/src/app/components/admin/admin-user/admin-user-details/admin-user-details.component.html
+++ b/src/app/components/admin/admin-user/admin-user-details/admin-user-details.component.html
@@ -1,3 +1,4 @@
+<!-- * ADMIN-USER-DETAILS * -->
 <div class="row mb-4">
     <a class="text-primary back-users"
        [routerLink]="['/admin/users']"><i class="fal fa-arrow-circle-left"></i>&nbsp;All Users
