--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -22,6 +22,10 @@
                                    class="form-control"
                                    [class.invalid]="!f.title.valid && f.title.touched"
                                    formControlName="title">
+                            <p class="help-block alert alert-warning text-center mt-1"
+                               *ngIf="!f.title.valid && f.title.touched">
+                                Valid <b>Title</b> is required!
+                            </p>
                         </div>
 
                         <div class="form-group">
@@ -30,6 +34,10 @@
                                    class="form-control"
                                    [class.invalid]="!f.author.valid && f.author.touched"
                                    formControlName="author">
+                            <p class="help-block alert alert-warning text-center mt-1"
+                               *ngIf="!f.author.valid && f.author.touched">
+                                <b>Author</b> is required!
+                            </p>
                         </div>
 
 
@@ -69,6 +77,10 @@
                                       rows="10"
                                       formControlName="body">
                             </textarea>
+                            <p class="help-block alert alert-warning text-center mt-1"
+                               *ngIf="!f.body.valid && f.body.touched">
+                                The <b>Body</b> with at least 100 characters is required!
+                            </p>
                         </div>
 
                         <div class="form-group">
@@ -93,19 +105,6 @@
                                 [disabled]="!editPageForm.valid"
                                 class="btn btn-primary mb-5"><i class="fa fa-save"></i>&nbsp;Save
                         </button>
-
-                        <p class="help-block alert alert-warning text-center"
-                           *ngIf="!f.title.valid && f.title.touched">
-                            Valid <b>Title</b> is required!
-                        </p>
-                        <p class="help-block alert alert-warning text-center"
-                           *ngIf="!f.body.valid && f.body.touched">
-                            The <b>Body</b> with at least 100 characters is required!
-                        </p>
-                        <p class="help-block alert alert-warning text-center"
-                           *ngIf="!f.author.valid && f.author.touched">
-                            <b>Author</b> is required!
-                        </p>
 
                         <!-- * Debugging * -->
                         <!--<code>-->
