--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -1,3 +1,124 @@
-<p>
-  admin-page-new works!
-</p>
+<!-- * ADMIN-PAGE-NEW * -->
+<div class="row mb-4">
+    <a class="text-primary back-pages"
+       [routerLink]="['/admin/pages']"><i class="fal fa-arrow-circle-left"></i>&nbsp;All Pages
+    </a>
+</div>
+
+<div class="container">
+    <div class="row">
+
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="card-title">
+                        <h2>New Page</h2>
+                    </div>
+
+                    <form [formGroup]="newPageForm"
+                          (ngSubmit)="onAddNewPage(newPageForm.value)">
+                        <div class="form-group">
+                            <label>Title</label>
+                            <input type="text"
+                                   class="form-control"
+                                   [class.invalid]="!f.title.valid && f.title.touched"
+                                   formControlName="title">
+                            <p class="help-block alert alert-warning text-center mt-1"
+                               *ngIf="!f.title.valid && f.title.touched">
+                                Valid <b>Title</b> is required!
+                            </p>
+                        </div>
+
+                        <div class="form-group">
+                            <label>Author</label>
+                            <input type="text"
+                                   class="form-control"
+                                   [class.invalid]="!f.author.valid && f.author.touched"
+                                   formControlName="author">
+                            <p class="help-block alert alert-warning text-center mt-1"
+                               *ngIf="!f.author.valid && f.author.touched">
+                                <b>Author</b> is required!
+                            </p>
+                        </div>
+
+
+                        <div class="form-group">
+                            <label>Created On</label>
+                            <input type="number"
+                                   class="form-control"
+                                   [class.invalid]="!f.date.valid && f.date.touched"
+                                   formControlName="date">
+                        </div>
+
+                        <div class="form-group">
+                            <label>Image</label>
+                            <input type="text"
+                                   class="form-control"
+                                   [class.invalid]="!f.photoURL.valid && f.photoURL.touched"
+                                   formControlName="photoURL">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="category">Category</label>
+                            <select class="form-control"
+                                    id="category"
+                                    [class.invalid]="!f.category.valid && f.category.touched"
+                                    formControlName="category">
+                                <option>Attendee Planning</option>
+                                <option>Education</option>
+                                <option>Exhibitor Information</option>
+                                <option>News &amp; Media</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group">
+                            <label>Body</label>
+                            <textarea class="form-control"
+                                      rows="10"
+                                      formControlName="body">
+                            </textarea>
+                            <p class="help-block alert alert-warning text-center mt-1"
+                               *ngIf="!f.body.valid && f.body.touched">
+                                The <b>Body</b> with at least 100 characters is required!
+                            </p>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox"
+                                       class="custom-control-input"
+                                       id="published"
+                                       formControlName="published">
+                                <label class="custom-control-label"
+                                       for="published">Publish?</label>
+                            </div>
+                        </div>
+
+                        <div class="btn-group float-right" role="group" aria-label="Basic example">
+                            <a class="btn btn-secondary text-light btn-sm"
+                               [routerLink]="['/admin/pages']">
+                                <i class="fa fa-undo"></i>&nbsp;Cancel
+                            </a>
+                        </div>
+
+                        <button type="submit"
+                                [disabled]="!newPageForm.valid"
+                                class="btn btn-primary mb-5"><i class="fa fa-save"></i>&nbsp;Save
+                        </button>
+
+                        <!-- * Debugging * -->
+                        <!--<code>-->
+                        <!--<pre>Form value: {{ newPageForm.value | json }}</pre>-->
+                        <!--</code>-->
+                        <!--<code>-->
+                        <!--<pre>Form value: {{ newPageForm.status | json }}</pre>-->
+                        <!--</code>-->
+
+                    </form>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+</div>
