--- a/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
@@ -6,9 +6,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link" [routerLink]="['pages']">Pages</a>
-            <a class="nav-item nav-link" [routerLink]="['users']">Users</a>
-            <a class="nav-item nav-link" [routerLink]="['/']">FrontEnd</a>
+            <a class="nav-item nav-link" [routerLink]="['pages']"><i class="fa fa-file"></i>&nbsp;Pages</a>
+            <a class="nav-item nav-link" [routerLink]="['users']"><i class="fa fa-user"></i>&nbsp;Users</a>
+            <a class="nav-item nav-link" [routerLink]="['/']"><i class="fa fa-globe"></i>&nbsp;Live Site</a>
         </div>
     </div>
     <ul class="navbar-nav mx-auto">
