--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -1,3 +1,4 @@
+<!-- * ADMIN-PAGE-EDIT * -->
 <div class="row mb-4">
     <a class="text-primary back-pages"
        [routerLink]="['/admin/pages']"><i class="fal fa-arrow-circle-left"></i>&nbsp;All Pages
@@ -11,7 +12,7 @@
             <div class="card">
                 <div class="card-body">
                     <div class="card-title">
-                        <h2>Edit {{ page.title }}</h2>
+                        <h2>Edit <b><i>{{ page.title }}</i></b></h2>
                     </div>
 
                     <form [formGroup]="editPageForm"
@@ -64,10 +65,9 @@
                                     [class.invalid]="!f.category.valid && f.category.touched"
                                     formControlName="category">
                                 <option>Attendee Planning</option>
-                                <option>Page 2</option>
-                                <option>Page 3</option>
-                                <option>Page 4</option>
-                                <option>Page 5</option>
+                                <option>Education</option>
+                                <option>Exhibitor Information</option>
+                                <option>News &amp; Media</option>
                             </select>
                         </div>
 
@@ -95,7 +95,7 @@
                         </div>
 
                         <div class="btn-group float-right" role="group" aria-label="Basic example">
-                            <a class="btn btn-secondary btn-sm"
+                            <a class="btn btn-secondary text-light btn-sm"
                                [routerLink]="['/admin/pages']">
                                 <i class="fa fa-undo"></i>&nbsp;Cancel
                             </a>
