--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -11,6 +11,17 @@
         <div class="col-md-6" *ngIf="page">
             <div class="card">
                 <div class="card-body">
+                    <button type="submit"
+                            [disabled]="!editPageForm.valid"
+                            class="btn btn-primary btn-sm mb-5"><i class="fa fa-save"></i>&nbsp;Update
+                    </button>
+
+                    <div class="btn-group float-right" role="group" aria-label="Basic example">
+                        <a class="btn btn-warning btn-sm"
+                           [routerLink]="['/admin/pages']">
+                            <i class="fa fa-undo"></i>&nbsp;Cancel
+                        </a>
+                    </div>
                     <div class="card-title">
                         <h2>Edit <b><i>{{ page.title }}</i></b></h2>
                     </div>
@@ -64,10 +75,24 @@
                                     id="category"
                                     [class.invalid]="!f.category.valid && f.category.touched"
                                     formControlName="category">
+                                <option>Register</option>
                                 <option>Attendee Planning</option>
                                 <option>Education</option>
                                 <option>Exhibitor Information</option>
                                 <option>News &amp; Media</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="category">Template</label>
+                            <select class="form-control"
+                                    id="template"
+                                    [class.invalid]="!f.template.valid && f.template.touched"
+                                    formControlName="template">
+                                <option>Full Width</option>
+                                <option>3 Column Bottom</option>
+                                <option>3 Column Top</option>
+                                <option>Blog Post</option>
                             </select>
                         </div>
 
@@ -94,17 +119,19 @@
                             </div>
                         </div>
 
+
+                        <button type="submit"
+                                [disabled]="!editPageForm.valid"
+                                class="btn btn-primary btn-sm mb-5">
+                            <i class="fa fa-save"></i>&nbsp;Update
+                        </button>
+
                         <div class="btn-group float-right" role="group" aria-label="Basic example">
-                            <a class="btn btn-secondary text-light btn-sm"
+                            <a class="btn btn-warning btn-sm"
                                [routerLink]="['/admin/pages']">
                                 <i class="fa fa-undo"></i>&nbsp;Cancel
                             </a>
                         </div>
-
-                        <button type="submit"
-                                [disabled]="!editPageForm.valid"
-                                class="btn btn-primary mb-5"><i class="fa fa-save"></i>&nbsp;Save
-                        </button>
 
                         <!-- * Debugging * -->
                         <!--<code>-->
@@ -124,15 +151,9 @@
             <div class="card">
                 <img class="card-img-top img-fluid" [src]="page.photoURL" [alt]="page.title">
                 <div class="card-body">
-                    <div class="btn-group float-right" role="group" aria-label="Basic example">
-                        <a class="btn btn-secondary btn-sm"
-                           [routerLink]="['/admin/pages']">
-                            <i class="fa fa-undo"></i>&nbsp;Cancel
-                        </a>
-                    </div>
                     <h5 class="card-title">{{ page.title }}</h5>
                     <p class="card-text">
-                        {{ page.author}} <br>
+                        {{ page.author }} <br>
                         Categories: {{ page.category }} <br>
                         Body: <br> {{ page.body }}
                     </p>
