--- a/src/app/components/admin/admin-page/admin-page.component.html
+++ b/src/app/components/admin/admin-page/admin-page.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="container">
         <h2>Pages</h2>
-        <button class="btn btn-outline-primary btn-sm mb-3"
+        <button class="btn btn-outline-primary btn-sm mb-3 float-right"
                 [routerLink]="['new']"><i class="fa fa-file-plus"></i>&nbsp; New Page
         </button>
     </div>
