--- a/src/app/components/admin/admin-user/admin-user-details/admin-user-details.component.html
+++ b/src/app/components/admin/admin-user/admin-user-details/admin-user-details.component.html
@@ -16,6 +16,10 @@
                [routerLink]="['edit']">
                 <i class="fa fa-pencil"></i>&nbsp;Edit
             </a>
+            <a class="btn btn-warning btn-sm"
+               [routerLink]="['/admin/users']">
+                <i class="fa fa-undo"></i>&nbsp;Cancel
+            </a>
             <button class="btn btn-danger btn-sm"
                     (click)="onDeleteUser()">
                 <i class="fa fa-trash"></i>&nbsp;Delete
