--- a/src/app/components/admin/admin-user/admin-user-new/admin-user-new.component.html
+++ b/src/app/components/admin/admin-user/admin-user-new/admin-user-new.component.html
@@ -4,83 +4,90 @@
     </a>
 </div>
 
-<h2>Add New User</h2>
+<div class="row">
+    <div class="container">
+        <div class="card">
+            <div class="card-body">
+                <h2 class="card-title">Add New User</h2>
+                <form [formGroup]="newUserForm"
+                      (ngSubmit)="onAddNewUser(newUserForm.value)">
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="email"
+                               class="form-control"
+                               [class.invalid]="!f.email.valid && f.email.touched"
+                               formControlName="email">
+                    </div>
+
+                    <div class="form-group">
+                        <label>Password</label>
+                        <input type="password"
+                               class="form-control"
+                               [class.invalid]="!f.password.valid && f.password.touched"
+                               formControlName="password">
+                    </div>
+
+                    <!-- * TODO: Create username from email function if blank * -->
+                    <div class="form-group">
+                        <label>Display Name
+                            <small>(username)</small>
+                        </label>
+                        <input type="text"
+                               class="form-control"
+                               [class.invalid]="!f.displayName.valid && f.displayName.touched"
+                               formControlName="displayName">
+                    </div>
+
+                    <div class="form-group">
+                        <label>Job Title</label>
+                        <input type="text"
+                               class="form-control"
+                               [class.invalid]="!f.title.valid && f.title.touched"
+                               formControlName="title">
+                    </div>
+
+                    <div class="form-group form-check">
+                        <input type="checkbox"
+                               class="form-check-input"
+                               formControlName="admin">
+                        <label class="form-check-label">Admin User?</label>
+                    </div>
 
 
-<form [formGroup]="newUserForm"
-      (ngSubmit)="onAddNewUser(newUserForm.value)">
-    <div class="form-group">
-        <label>Email</label>
-        <input type="email"
-               class="form-control"
-               [class.invalid]="!f.email.valid && f.email.touched"
-               formControlName="email">
+                    <button type="submit"
+                            [disabled]="!newUserForm.valid"
+                            class="btn btn-primary btn-sm mb-5"><i class="fa fa-user-plus"></i>&nbsp;Save
+                    </button>
+
+
+                    <p class="help-block alert alert-warning text-center"
+                       *ngIf="!f.email.valid && f.email.touched">
+                        Valid <b>Email</b> is required!
+                    </p>
+                    <p class="help-block alert alert-warning text-center"
+                       *ngIf="!f.password.valid && f.password.touched">
+                        <b>Password</b> with at least 8 characters and one number is required!
+                    </p>
+                    <p class="help-block alert alert-warning text-center"
+                       *ngIf="!f.displayName.valid && f.displayName.touched">
+                        <b>Display Name</b> is required!
+                    </p>
+                    <p class="help-block alert alert-warning text-center"
+                       *ngIf="!f.title.valid && f.title.touched">
+                        <b>Job Title</b> is required!
+                    </p>
+
+                    <!-- * Debugging * -->
+                    <!--<code>-->
+                    <!--<pre>Form value: {{ newUserForm.value | json }}</pre>-->
+                    <!--</code>-->
+                    <!--<code>-->
+                    <!--<pre>Form value: {{ newUserForm.status | json }}</pre>-->
+                    <!--</code>-->
+
+                </form>
+
+            </div>
+        </div>
     </div>
-
-    <div class="form-group">
-        <label>Password</label>
-        <input type="password"
-               class="form-control"
-               [class.invalid]="!f.password.valid && f.password.touched"
-               formControlName="password">
-    </div>
-
-    <!-- * TODO: Create username from email function if blank * -->
-    <div class="form-group">
-        <label>Display Name
-            <small>(username)</small>
-        </label>
-        <input type="text"
-               class="form-control"
-               [class.invalid]="!f.displayName.valid && f.displayName.touched"
-               formControlName="displayName">
-    </div>
-
-    <div class="form-group">
-        <label>Job Title</label>
-        <input type="text"
-               class="form-control"
-               [class.invalid]="!f.title.valid && f.title.touched"
-               formControlName="title">
-    </div>
-
-    <div class="form-group form-check">
-        <input type="checkbox"
-               class="form-check-input"
-               formControlName="admin">
-        <label class="form-check-label">Admin User?</label>
-    </div>
-
-
-    <button type="submit"
-            [disabled]="!newUserForm.valid"
-            class="btn btn-primary mb-5">Submit
-    </button>
-
-
-    <p class="help-block alert alert-warning text-center"
-       *ngIf="!f.email.valid && f.email.touched">
-        Valid <b>Email</b> is required!
-    </p>
-    <p class="help-block alert alert-warning text-center"
-       *ngIf="!f.password.valid && f.password.touched">
-        <b>Password</b> with at least 8 characters and one number is required!
-    </p>
-    <p class="help-block alert alert-warning text-center"
-       *ngIf="!f.displayName.valid && f.displayName.touched">
-        <b>Display Name</b> is required!
-    </p>
-    <p class="help-block alert alert-warning text-center"
-       *ngIf="!f.title.valid && f.title.touched">
-        <b>Job Title</b> is required!
-    </p>
-
-    <!-- * Debugging * -->
-    <!--<code>-->
-        <!--<pre>Form value: {{ newUserForm.value | json }}</pre>-->
-    <!--</code>-->
-    <!--<code>-->
-        <!--<pre>Form value: {{ newUserForm.status | json }}</pre>-->
-    <!--</code>-->
-
-</form>
+</div>
