--- a/src/app/components/admin/admin-user/admin-user.component.html
+++ b/src/app/components/admin/admin-user/admin-user.component.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="container">
         <h2>Users</h2>
-        <button class="btn btn-outline-primary btn-sm mb-3"
-                [routerLink]="['new']">Add New User
+        <button class="btn btn-outline-primary btn-sm mb-3 float-right"
+                [routerLink]="['new']"><i class="fa fa-user-plus"></i>&nbsp;New User
         </button>
     </div>
 </div>
