App now adds user's afs document field data into local storage

--- a/src/app/components/admin/admin-page/admin-page-item/admin-page-item.component.html
+++ b/src/app/components/admin/admin-page/admin-page-item/admin-page-item.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="['/admin/pages/', page.uid]">
+<a [routerLink]="['/admin/pages/', page.$key]">
     <div class="card text-dark">
         <img class="card-img-top" [src]="page.photoURL" [alt]="page.title">
         <div class="card-body">
