Added ngx-bootstrap but doesn't seem to be working with ng6

--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -55,9 +55,10 @@
 
                         <div class="form-group">
                             <label>Created On</label>
-                            <input type="number"
+                            <input type="date"
                                    class="form-control"
                                    [class.invalid]="!f.date.valid && f.date.touched"
+                                   bsDatepicker="date"
                                    formControlName="date">
                         </div>
 
