--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -44,7 +44,7 @@
 
                         <div class="form-group">
                             <label>Created On</label>
-                            <input type="number"
+                            <input type="date"
                                    class="form-control"
                                    [class.invalid]="!f.date.valid && f.date.touched"
                                    formControlName="date">
