ngx-bootstrap not working with ng6

--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -43,10 +43,11 @@
 
 
                         <div class="form-group">
-                            <label>Created On</label>
-                            <input type="date"
+                            <label>Publish Date</label>
+                            <input type="string"
                                    class="form-control"
                                    [class.invalid]="!f.date.valid && f.date.touched"
+                                   bsDatepicker
                                    formControlName="date">
                         </div>
 
