--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -54,11 +54,11 @@
 
 
                         <div class="form-group">
-                            <label>Created On</label>
-                            <input type="date"
+                            <label>Publish Date</label>
+                            <input type="string"
                                    class="form-control"
                                    [class.invalid]="!f.date.valid && f.date.touched"
-                                   bsDatepicker="date"
+                                   bsDatepicker
                                    formControlName="date">
                         </div>
 
