--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -43,8 +43,8 @@
 
 
                         <div class="form-group">
-                            <label>Created On</label>
-                            <input type="number"
+                            <label>Publish On <small>(Hover input and click arrow for datepicker)</small></label>
+                            <input type="date"
                                    class="form-control"
                                    [class.invalid]="!f.date.valid && f.date.touched"
                                    formControlName="date">
